{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 629,
  "lineage": "f5c1f2c6-d0b1-eb63-bd34-c10a22bfe025",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "awx-eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "awx-eks",
            "metadata": [
              {
                "annotations": {
                  "name": "awx-eks"
                },
                "generation": 0,
                "labels": {
                  "eks": "true"
                },
                "name": "awx-eks",
                "resource_version": "614",
                "uid": "57ec9831-45c4-4100-897e-2bbf761bd051"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.logging",
            "module.eks.aws_eks_cluster.eks_cluster",
            "module.eks.data.aws_eks_cluster_auth.cluster",
            "module.iam.aws_iam_role.eks_cluster",
            "module.kms.aws_kms_key.eks_encryption",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05ec346282f05c256",
            "association_id": "eipassoc-00c668d2f7c1113da",
            "domain": "vpc",
            "id": "eipalloc-05ec346282f05c256",
            "network_border_group": "us-east-2",
            "network_interface": "eni-02378f75e28b5a65b",
            "private_dns": "ip-10-0-1-220.us-east-2.compute.internal",
            "private_ip": "10.0.1.220",
            "public_dns": "ec2-3-132-193-226.us-east-2.compute.amazonaws.com",
            "public_ip": "3.132.193.226",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:574137357818:internet-gateway/igw-08601591710f878e2",
            "id": "igw-08601591710f878e2",
            "owner_id": "574137357818",
            "tags": {
              "Name": "gabrielmaneraworkshop-igw"
            },
            "tags_all": {
              "Name": "gabrielmaneraworkshop-igw"
            },
            "vpc_id": "vpc-0b7fd9a8c877d9c96"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05ec346282f05c256",
            "association_id": "eipassoc-00c668d2f7c1113da",
            "connectivity_type": "public",
            "id": "nat-03ae6dba25d2e02e7",
            "network_interface_id": "eni-02378f75e28b5a65b",
            "private_ip": "10.0.1.220",
            "public_ip": "3.132.193.226",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00e1244c1623bd90f",
            "tags": {
              "Name": "gabrielmaneraworkshop-nat-gw"
            },
            "tags_all": {
              "Name": "gabrielmaneraworkshop-nat-gw"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:574137357818:route-table/rtb-04cde2334fa97b6df",
            "id": "rtb-04cde2334fa97b6df",
            "owner_id": "574137357818",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03ae6dba25d2e02e7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gabrielmaneraworkshop-private-rt"
            },
            "tags_all": {
              "Name": "gabrielmaneraworkshop-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7fd9a8c877d9c96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:574137357818:route-table/rtb-0225966a4e4e3d571",
            "id": "rtb-0225966a4e4e3d571",
            "owner_id": "574137357818",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08601591710f878e2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gabrielmaneraworkshop-public-rt"
            },
            "tags_all": {
              "Name": "gabrielmaneraworkshop-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7fd9a8c877d9c96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f7bfcf74744cdbf",
            "route_table_id": "rtb-04cde2334fa97b6df",
            "subnet_id": "subnet-02330fe877d70da1e"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a87557cb81439cd7",
            "route_table_id": "rtb-0225966a4e4e3d571",
            "subnet_id": "subnet-00e1244c1623bd90f"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_vpc_endpoint_guardduty",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:574137357818:security-group/sg-004a1b4ba3fe03f7d",
            "description": "Security Group used by VPC Endpoints.",
            "egress": [],
            "id": "sg-004a1b4ba3fe03f7d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress for port 443.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "gabrielmaneraworkshop-vpc-endpoint-guardduty-sg-20231124121202320600000007",
            "name_prefix": "gabrielmaneraworkshop-vpc-endpoint-guardduty-sg-",
            "owner_id": "574137357818",
            "revoke_rules_on_delete": false,
            "tags": {
              "GuardDutyManaged": "false",
              "Name": "gabrielmaneraworkshop-vpc-endpoint-guardduty-sg"
            },
            "tags_all": {
              "GuardDutyManaged": "false",
              "Name": "gabrielmaneraworkshop-vpc-endpoint-guardduty-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7fd9a8c877d9c96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_vpc_guardduty_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Ingress for port 443.",
            "from_port": 443,
            "id": "sgrule-2792022893",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-004a1b4ba3fe03f7d",
            "security_group_rule_id": "sgr-0b45f73c8d86b7061",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.eks_vpc_endpoint_guardduty",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:574137357818:subnet/subnet-02330fe877d70da1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02330fe877d70da1e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "574137357818",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gabrielmaneraworkshop-private-subnet"
            },
            "tags_all": {
              "Name": "gabrielmaneraworkshop-private-subnet"
            },
            "vpc_id": "vpc-0b7fd9a8c877d9c96"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:574137357818:subnet/subnet-00e1244c1623bd90f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e1244c1623bd90f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "574137357818",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gabrielmaneraworkshop-public-subnet"
            },
            "tags_all": {
              "Name": "gabrielmaneraworkshop-public-subnet"
            },
            "vpc_id": "vpc-0b7fd9a8c877d9c96"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:574137357818:vpc/vpc-0b7fd9a8c877d9c96",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ca9104a3b4b4f577",
            "default_route_table_id": "rtb-03b65b34fe8f86c48",
            "default_security_group_id": "sg-0172c3dd0ba92aa92",
            "dhcp_options_id": "dopt-07edb5c0da35956a9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b7fd9a8c877d9c96",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03b65b34fe8f86c48",
            "owner_id": "574137357818",
            "tags": {
              "Name": "gabrielmaneraworkshop-vpc"
            },
            "tags_all": {
              "Name": "gabrielmaneraworkshop-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}